# flight-data_scala

./: FlightData_Step-by-step.html  README.md  pyproject.toml  requirements.txt
flight_data/: FlightData_Step-by-step.ipynb
flight_data/question1.csv/: .part-00000-aa1bedd6-5f2d-4415-afb1-f3ceeec174c3-c000.csv.crc
flight_data/question2.csv/: .part-00000-9c8f3138-869d-4879-b34d-12815253494d-c000.csv.crc  part-00000-9c8f3138-869d-4879-b34d-12815253494d-c000.csv
flight_data/question3.csv/: .part-00000-80a14bc2-a297-4c2c-85a0-4a78d1a90eec-c000.csv.crc  part-00000-80a14bc2-a297-4c2c-85a0-4a78d1a90eec-c000.csv
flight_data/question4.csv/: .part-00000-03b1c5b6-ab68-47e2-8c02-32f551de1bd4-c000.csv.crc  part-00000-03b1c5b6-ab68-47e2-8c02-32f551de1bd4-c000.csv
flight_data/questionExtra.csv/: .part-00000-4d230821-6aad-41a9-aa3c-34755c6c569c-c000.csv.crc  part-00000-4d230821-6aad-41a9-aa3c-34755c6c569c-c000.csv
