[tool.poetry]
name = "flight-data"
version = "0.1.0"
description = "Flight Data Assignment"
authors = ["Dieter de Wit <dieterdewit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
notebook = "^6.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
